<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andriod.lennyface.monstamath.MainActivity">

    <TextView
        android:layout_width="405dp"
        android:layout_height="123dp"
        android:fontFamily="serif-monospace"
        android:text="@string/welcome_to_monsta_math_enter_if_you_dare"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316"
        android:id="@+id/textView3" />

    <Button
        android:id="@+id/playGameButton"
        android:layout_width="198dp"
        android:layout_height="100dp"
        android:elevation="0dp"
        android:text="@string/play"
        android:textAlignment="center"
        android:textSize="36sp"
        android:typeface="normal"
        android:layout_marginTop="181dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginEnd="541dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/optionButton"
        android:layout_width="198dp"
        android:layout_height="100dp"
        android:text="@string/options"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintRight_toLeftOf="@+id/playGameButton"
        android:layout_marginEnd="158dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="88dp" />

</android.support.constraint.ConstraintLayout>
