<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andriod.lennyface.monstamath.settings_activity"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="153dp"
        android:layout_height="47dp"
        android:text="@string/volume"
        android:textSize="40sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="95dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="357dp"
        android:layout_height="47dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="125dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="95dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="125dp"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:text="@string/haptic_feedback"
        android:textSize="40sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="277dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="84dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="277dp"
        app:layout_constraintRight_toLeftOf="@+id/checkBox2"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button"
        android:layout_width="202dp"
        android:layout_height="0dp"
        android:text="@string/music_selection"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="277dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        android:layout_marginLeft="277dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button2"
        android:layout_width="202dp"
        android:layout_height="92dp"
        android:text="@string/color_modes"
        android:textSize="24sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="280dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="139dp"
        android:layout_marginRight="280dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="93dp"
        android:checked="false"
        app:layout_constraintLeft_toLeftOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>
